# stac-geoparquet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASING.md  mkdocs.yml  pgstac_reader.py  pyproject.toml  setup.cfg  stac_geoparquet.py  test_pgstac_reader.py  versions.json
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  deploy-mkdocs.yml  publish.yml
0.5.1/: 404.html  index.html
0.5.1/api/arrow/: index.html
0.5.1/api/legacy/: legacy.md
0.5.1/examples/naip/: index.html
0.5.1/overrides/: main.html
0.5.1/schema/: index.html
0.5.1/search/: search_index.json
0.5.1/spec/stac-geoparquet-spec/: index.html
0.5.1/usage/: index.html
0.6.0/: 404.html  objects.inv
0.6.0/api/legacy/: index.html
0.6.0/api/pgstac/: index.html  pgstac.md
0.6.0/drawbacks/: index.html
0.6.0/schema/: index.html
0.6.0/usage/: index.html
0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
0.8.0/api/arrow/: index.html
0.8.0/api/legacy/: index.html
0.8.0/api/pgstac/: index.html
0.8.0/drawbacks/: index.html
0.8.0/schema/: index.html
0.8.0/search/: search_index.json
0.8.0/spec/stac-geoparquet-spec/: index.html
0.8.0/usage/: index.html
0.8.0/whatsnew/: index.html
0.8.1/: sitemap.xml
0.8.1/api/arrow/: index.html
0.8.1/search/: search_index.json
0.8.1/whatsnew/: index.html
docs/: schema.md  usage.md  whatsnew.md
docs/api/: geopandas.md  legacy.md  pgstac.md
docs/examples/: dump_pgstac_to_parquet.ipynb  naip.ipynb
docs/spec/: stac-geoparquet-spec.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api/arrow/: arrow.md  index.html
latest/api/legacy/: index.html
latest/api/pgstac/: index.html
latest/drawbacks/: drawbacks.md  index.html
latest/examples/dump_pgstac_to_parquet/: index.html
latest/examples/naip/: naip.ipynb
latest/search/: search_index.json
latest/spec/stac-geoparquet-spec/: index.html
latest/usage/: index.html
scripts/: install  lint  test
spec/: example-metadata.json  stac-geoparquet-spec.md
spec/json-schema/: metadata.json
stac_geoparquet/: __init__.py  _compat.py  _version.py  cli.py  from_arrow.py  json_reader.py  pc_runner.py  pgstac_reader.py  stac_arrow.py  stac_geoparquet.py  streaming.py  to_arrow.py  to_parquet.py  utils.py
stac_geoparquet/arrow/: __init__.py  _api.py  _batch.py  _constants.py  _crs.py  _delta_lake.py  _from_arrow.py  _to_arrow.py  _to_parquet.py  _util.py  types.py
stac_geoparquet/arrow/_schema/: default_schemas.py  ingest.py  models.py
tests/: base_sentinel2_l2a.json  json_equals.py  record_sentinel2_l2a.json  sentinel-2-item.json  test_arrow.py  test_delta_lake.py  test_parquet.py  test_pgstac_reader.py  test_stac_geoparquet.py  test_to_dict.py
tests/cassettes/test_parquet/: test_metadata[False].yaml  test_metadata[True].yaml
tests/cassettes/test_pgstac_reader/: test_generate_endpoints.yaml  test_naip_item.yaml  test_sentinel2_l2a.yaml
tests/cassettes/test_stac_geoparquet/: test_assert_equal.yaml  test_s1_grd.yaml  test_smoke[3dep-lidar-classification].yaml  test_smoke[3dep-lidar-copc].yaml  test_smoke[3dep-lidar-dsm].yaml  test_smoke[3dep-lidar-dtm-native].yaml  test_smoke[3dep-lidar-dtm].yaml  test_smoke[3dep-lidar-hag].yaml  test_smoke[3dep-lidar-intensity].yaml  test_smoke[3dep-lidar-pointsourceid].yaml  test_smoke[3dep-lidar-returns].yaml  test_smoke[3dep-seamless].yaml  test_smoke[alos-dem].yaml  test_smoke[alos-fnf-mosaic].yaml  test_smoke[alos-palsar-mosaic].yaml  test_smoke[aster-l1t].yaml  test_smoke[chloris-biomass].yaml  test_smoke[cil-gdpcir-cc-by-sa].yaml  test_smoke[cil-gdpcir-cc-by].yaml  test_smoke[cil-gdpcir-cc0].yaml  test_smoke[cop-dem-glo-30].yaml  test_smoke[cop-dem-glo-90].yaml  test_smoke[eclipse].yaml  test_smoke[ecmwf-forecast].yaml  test_smoke[era5-pds].yaml  test_smoke[esa-worldcover].yaml  test_smoke[fia].yaml  test_smoke[gap].yaml  test_smoke[gbif].yaml  test_smoke[gnatsgo-rasters].yaml  test_smoke[gnatsgo-tables].yaml  test_smoke[goes-cmi].yaml  test_smoke[hrea].yaml  test_smoke[io-lulc-9-class].yaml  test_smoke[io-lulc].yaml  test_smoke[jrc-gsw].yaml  test_smoke[landsat-c2-l1].yaml  test_smoke[landsat-c2-l2].yaml  test_smoke[mobi].yaml  test_smoke[modis-09A1-061].yaml  (+33 more)
tests/data/: 3dep-lidar-copc-pc-collection.json  3dep-lidar-copc-pc.json  3dep-lidar-dsm-pc.json  README.md  cop-dem-glo-30-pc.json  download.py  io-lulc-annual-v02-pc.json  io-lulc-pc.json  landsat-c2-l1-pc.json  landsat-c2-l2-pc.json  naip-pc.json  naip.parquet  planet-nicfi-analytic-pc.json  sentinel-1-rtc-pc.json  sentinel-2-l2a-pc.json  umbra-sar.json  us-census-pc.json
