[build-system]
requires = ["hatchling>=1.22.2", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "stac-geoparquet"
authors = [{ name = "Tom Augspurger", email = "taugspurger@microsoft.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
    "ciso8601",
    "deltalake",
    "geopandas",
    "packaging",
    "pandas",
    # Needed for RecordBatch.append_column
    # Below 19 b/c https://github.com/apache/arrow/issues/45283
    "pyarrow>=16,<19",
    "pyproj",
    "pystac",
    "shapely",
    "orjson",
    'typing_extensions; python_version < "3.11"',
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "stac_geoparquet/_version.py"

[project.optional-dependencies]
pgstac = [
    "fsspec",
    "psycopg[binary,pool]",
    "pypgstac",
    "python-dateutil",
    "tqdm",
]
pc = ["adlfs", "azure-data-tables", "psycopg[binary,pool]", "pypgstac", "tqdm"]

[dependency-groups]
dev = [
    "check-jsonschema",
    "jsonschema",
    "mypy",
    "numpy>=2",
    "pre-commit",
    "pytest-recording>=0.13.2",
    "pytest",
    "requests",
    "ruff",
    "stac-geoparquet[pc]",
    "stac-geoparquet[pgstac]",
    "types-python-dateutil",
    "types-requests",
    "vcrpy>=7.0.0",
]
docs = [
    "griffe-inherited-docstrings",
    "mike>=2",
    "mkdocs-jupyter",
    "mkdocs-material[imaging]>=9.5",
    "mkdocs",
    "mkdocstrings[python]>=0.25.1",
]

[tool.uv]
default-groups = ["dev", "docs"]


[project.urls]
Home = "https://github.com/stac-utils/stac-geoparquet"

[project.scripts]
pc-geoparquet = "stac_geoparquet.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = ["ignore:.*distutils Version.*:DeprecationWarning"]

[tool.mypy]

python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "ciso8601.*",
    "fsspec.*",
    "geopandas.*",
    "pandas.*",
    "pyarrow.*",
    "pypgstac.*",
    "pyproj.*",
    "rich.*",
    "shapely.*",
    "tqdm.*",
]

ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stac_geoparquet.*"
disallow_untyped_defs = true

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401", # Allow unused imports in __init__.py files
]
